--- a/app/src/main/res/layout-land/fragment.xml
+++ b/app/src/main/res/layout-land/fragment.xml
@@ -15,105 +15,241 @@
             android:text="@string/text_title"
             android:textSize="25dp"
             android:gravity="center"
-            android:padding="20dp"
-            android:layout_margin="20dp"
-            android:background="@android:drawable/editbox_dropdown_light_frame"
+            android:paddingHorizontal="20dp"
+            android:paddingVertical="10dp"
+            android:background="@drawable/custom_view"
+            android:layout_margin="5dp"
 
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/view_left_valute_spinner"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/view_left_spinner_valute"
-            android:layout_marginBottom="140dp"/>
+            app:layout_constraintStart_toStartOf="parent"
+            />
+
+
+
+    <LinearLayout
+            android:id="@+id/container_left_value"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/custom_view"
+            android:orientation="vertical"
+            android:layout_margin="5dp"
+
+            app:layout_constraintHorizontal_weight="1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintEnd_toStartOf="@+id/container_right_value"
+            app:layout_constraintBottom_toTopOf="@+id/container_left_converter"   >
+        <TextView
+                android:id="@+id/label_left_value"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/text_label_value"
+                android:textSize="15dp"
+                android:gravity="left"
+                android:paddingHorizontal="10dp"
+                android:paddingTop="5dp"/>
+        <TextView
+                android:id="@+id/text_left_value"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/text_value_default"
+                android:textSize="30dp"
+                android:paddingVertical="0dp"
+                android:paddingHorizontal="15dp"
+                android:gravity="center"/>
+    </LinearLayout>
+
 
 
     <Spinner
-            android:id="@+id/view_left_spinner_valute"
+            android:id="@+id/view_left_valute_spinner"
             android:layout_width="0dp"
-            android:layout_height="80dp"
-            android:textSize="15dp"
-            android:padding="10dp"
+            android:layout_height="70dp"
+            android:textSize="20dp"
+            android:spinnerMode="dialog"
+            android:paddingVertical="10dp"
+            android:paddingHorizontal="5dp"
             android:gravity="center"
+            android:background="@drawable/custom_view"
             android:layout_margin="5dp"
-
-            android:background="@android:drawable/editbox_dropdown_light_frame"
-
 
             app:layout_constraintHorizontal_weight="1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintEnd_toStartOf="@+id/view_right_valute"
-            app:layout_constraintBottom_toTopOf="@+id/view_left_value"/>
-    <TextView
-            android:id="@+id/view_right_valute"
+            app:layout_constraintBottom_toTopOf="@+id/container_left_value"  />
+
+
+
+    <LinearLayout
+            android:id="@+id/container_right_value"
             android:layout_width="0dp"
-            android:layout_height="80dp"
-            android:text="@string/text_right_valute"
-            android:textSize="15dp"
-            android:padding="10dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/custom_view"
+            android:orientation="vertical"
             android:layout_margin="5dp"
 
             app:layout_constraintHorizontal_weight="1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/container_left_value"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintBottom_toBottomOf="@+id/container_left_value"
+            app:layout_constraintTop_toTopOf="@+id/container_left_value" >
+        <TextView
+                android:id="@+id/label_right_value"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/text_label_value"
+                android:textSize="15dp"
+                android:gravity="right"
+                android:paddingHorizontal="10dp"
+                android:paddingTop="5dp"/>
+        <TextView
+                android:id="@+id/text_right_value"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/text_value_default"
+                android:textSize="30dp"
+                android:gravity="center"
+                android:paddingVertical="0dp"
+                android:paddingHorizontal="15dp"
+        />
+    </LinearLayout>
+
+
+
+    <TextView
+            android:id="@+id/view_right_valute"
+            android:layout_width="0dp"
+            android:layout_height="70dp"
+            android:text="@string/text_right_valute"
+            android:textSize="20dp"
+            android:padding="10dp"
             android:gravity="center"
+            android:background="@drawable/custom_view"
+            android:layout_margin="5dp"
 
-            android:background="@android:drawable/editbox_dropdown_light_frame"
+            app:layout_constraintHorizontal_weight="1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/view_left_valute_spinner"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintBottom_toBottomOf="@+id/view_left_valute_spinner"
+            app:layout_constraintTop_toTopOf="@+id/view_left_valute_spinner"/>
 
+
+
+
+
+    <LinearLayout
+            android:id="@+id/container_left_converter"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/custom_view"
+            android:orientation="vertical"
+            android:layout_margin="5dp"
+
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/view_button_refresh"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintEnd_toStartOf="@+id/container_right_converter"
+            >
+        <TextView
+                android:id="@+id/label_left_converter"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/text_label_converter"
+                android:textSize="15dp"
+                android:gravity="left"
+                android:paddingHorizontal="10dp"
+                android:paddingTop="5dp"/>
+        <EditText
+                android:id="@+id/text_left_converter"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/text_value_default"
+                android:textSize="30dp"
+                android:gravity="center"
+                android:inputType="numberDecimal"
+                android:maxLength="6"
+                android:paddingVertical="0dp"
+                android:paddingHorizontal="15dp"
+
+                android:backgroundTint="@android:color/transparent"/>
+    </LinearLayout>
+
+
+    <LinearLayout
+            android:id="@+id/container_right_converter"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/custom_view"
+            android:orientation="vertical"
+            android:layout_margin="5dp"
 
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/view_left_spinner_valute"
+            app:layout_constraintBottom_toTopOf="@+id/view_button_refresh"
+            app:layout_constraintStart_toEndOf="@+id/container_left_converter"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintBottom_toBottomOf="@+id/view_left_spinner_valute"
-            app:layout_constraintTop_toTopOf="@+id/view_left_spinner_valute"/>
+
+    >
+        <TextView
+                android:id="@+id/label_right_converter"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/text_label_converter"
+                android:textSize="15dp"
+                android:gravity="right"
+                android:paddingHorizontal="10dp"
+                android:paddingTop="5dp"/>
+        <TextView
+                android:id="@+id/text_right_converter"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/text_value_default"
+                android:textSize="30dp"
+                android:paddingVertical="0dp"
+                android:paddingHorizontal="15dp"
+                android:gravity="center"/>
+    </LinearLayout>
+
+
     <Button
             android:id="@+id/view_button_refresh"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/text_button_refresh"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:background="@drawable/custom_button"
+            android:layout_margin="5dp"
+
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="4dp"/>
-    <TextView
-            android:id="@+id/view_left_value"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/text_left_value"
-            android:textSize="40dp"
-            android:padding="10dp"
-            android:gravity="center"
-
-            android:layout_margin="5dp"
-
-            android:background="@android:drawable/editbox_dropdown_light_frame"
-
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/view_button_refresh"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintEnd_toStartOf="@+id/view_right_value"/>
-    <TextView
-            android:id="@+id/view_right_value"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/text_right_value"
-            android:textSize="40dp"
-            android:padding="10dp"
-            android:gravity="center"
-
-            android:layout_margin="5dp"
-
-            android:background="@android:drawable/editbox_dropdown_light_frame"
-
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+
+
+    <ImageButton
+            android:id="@+id/view_button_arrow"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:background="@drawable/custom_round_button"
+
+            android:src="@drawable/ic_outline_double_arrow"
+
+            android:layout_marginBottom="4dp"
             app:layout_constraintBottom_toTopOf="@+id/view_button_refresh"
-            app:layout_constraintStart_toEndOf="@+id/view_left_value"
-            app:layout_constraintHorizontal_bias="0.5"/>
+            app:layout_constraintEnd_toEndOf="@+id/container_right_converter"
+            app:layout_constraintStart_toStartOf="@+id/container_left_converter"
+            app:layout_constraintTop_toTopOf="@+id/container_right_converter"/>
+
+
     <ProgressBar
             android:id="@+id/progress_bar"
             android:visibility="invisible"
             style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"/>
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="1.0"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
