--- a/app/src/main/res/layout/fragment.xml
+++ b/app/src/main/res/layout/fragment.xml
@@ -8,6 +8,159 @@
         tools:context=".ui.Fragment">
 
 
+    <LinearLayout
+            android:id="@+id/container_left_converter"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/custom_view"
+            android:orientation="vertical"
+            android:layout_margin="5dp"
+
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/view_button_refresh"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintEnd_toStartOf="@+id/container_right_converter">
+        <TextView
+                android:id="@+id/label_left_converter"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/text_label_converter"
+                android:textSize="15dp"
+                android:gravity="left"
+                android:paddingHorizontal="10dp"
+                android:paddingTop="5dp"/>
+        <EditText
+                android:id="@+id/text_left_converter"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/text_value_default"
+                android:textSize="30dp"
+                android:gravity="center"
+                android:inputType="numberDecimal"
+                android:maxLength="6"
+                android:paddingVertical="0dp"
+                android:paddingHorizontal="15dp"
+                android:backgroundTint="@android:color/transparent"/>
+    </LinearLayout>
+
+
+
+
+
+    <LinearLayout
+            android:id="@+id/container_left_value"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/custom_view"
+            android:orientation="vertical"
+            android:layout_margin="5dp"
+
+            app:layout_constraintHorizontal_weight="1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintEnd_toStartOf="@+id/container_right_value"
+            app:layout_constraintBottom_toTopOf="@+id/container_left_converter"
+    >
+        <TextView
+                android:id="@+id/label_left_value"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/text_label_value"
+                android:textSize="15dp"
+                android:gravity="left"
+                android:paddingHorizontal="10dp"
+                android:paddingTop="5dp"/>
+        <TextView
+                android:id="@+id/text_left_value"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/text_value_default"
+                android:textSize="30dp"
+                android:paddingVertical="0dp"
+                android:paddingHorizontal="15dp"
+                android:gravity="center"/>
+    </LinearLayout>
+
+
+
+    <LinearLayout
+            android:id="@+id/container_right_value"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/custom_view"
+            android:orientation="vertical"
+            android:layout_margin="5dp"
+
+            app:layout_constraintHorizontal_weight="1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/container_left_value"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintBottom_toBottomOf="@+id/container_left_value"
+            app:layout_constraintTop_toTopOf="@+id/container_left_value"
+    >
+        <TextView
+                android:id="@+id/label_right_value"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/text_label_value"
+                android:textSize="15dp"
+                android:gravity="right"
+                android:paddingHorizontal="10dp"
+                android:paddingTop="5dp"/>
+        <TextView
+                android:id="@+id/text_right_value"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/text_value_default"
+                android:textSize="30dp"
+                android:paddingVertical="0dp"
+                android:paddingHorizontal="15dp"
+                android:gravity="center"/>
+    </LinearLayout>
+
+
+
+
+
+    <LinearLayout
+            android:id="@+id/container_right_converter"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/custom_view"
+            android:orientation="vertical"
+            android:layout_margin="5dp"
+
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/view_button_refresh"
+            app:layout_constraintStart_toEndOf="@+id/container_left_converter"
+            app:layout_constraintHorizontal_bias="0.5"
+
+    >
+        <TextView
+                android:id="@+id/label_right_converter"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/text_label_converter"
+                android:textSize="15dp"
+                android:gravity="right"
+                android:paddingHorizontal="10dp"
+                android:paddingTop="5dp"/>
+        <TextView
+                android:id="@+id/text_right_converter"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/text_value_default"
+                android:textSize="30dp"
+                android:paddingVertical="0dp"
+                android:paddingHorizontal="15dp"
+                android:gravity="center"/>
+    </LinearLayout>
+
+
+
+
+
+
     <TextView
             android:id="@+id/view_title"
             android:layout_width="250dp"
@@ -16,31 +169,47 @@
             android:textSize="25dp"
             android:gravity="center"
             android:padding="20dp"
-            android:layout_margin="140dp"
-            android:background="@android:drawable/editbox_dropdown_light_frame"
+            android:layout_margin="70dp"
+            android:background="@drawable/custom_view"
+            android:layout_marginBottom="70dp"
+
 
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/view_left_spinner_valute"
-            android:layout_marginBottom="140dp"/>
+            app:layout_constraintBottom_toTopOf="@+id/view_left_valute_spinner"/>
+
+
+    <ImageButton
+            android:id="@+id/view_button_arrow"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:background="@drawable/custom_round_button"
+            android:src="@drawable/ic_outline_double_arrow"
+
+            android:layout_marginBottom="4dp"
+            app:layout_constraintBottom_toTopOf="@+id/view_button_refresh"
+            app:layout_constraintEnd_toEndOf="@+id/container_right_converter"
+            app:layout_constraintStart_toStartOf="@+id/container_left_converter"
+            app:layout_constraintTop_toTopOf="@+id/container_right_converter"/>
+
+
     <Spinner
-            android:id="@+id/view_left_spinner_valute"
+            android:id="@+id/view_left_valute_spinner"
             android:layout_width="0dp"
             android:layout_height="100dp"
             android:textSize="15dp"
-            android:padding="10dp"
+            android:spinnerMode="dialog"
+            android:paddingVertical="10dp"
+            android:paddingHorizontal="5dp"
             android:gravity="center"
-
-            android:background="@android:drawable/editbox_dropdown_light_frame"
-
+            android:background="@drawable/custom_view"
             android:layout_margin="5dp"
 
             app:layout_constraintHorizontal_weight="1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintEnd_toStartOf="@+id/view_right_valute"
-            app:layout_constraintBottom_toTopOf="@+id/view_left_value"/>
-
+            app:layout_constraintBottom_toTopOf="@+id/container_left_value"/>
 
     <TextView
             android:id="@+id/view_right_valute"
@@ -49,56 +218,17 @@
             android:text="@string/text_right_valute"
             android:textSize="15dp"
             android:padding="10dp"
+            android:gravity="center"
+            android:background="@drawable/custom_view"
+            android:layout_margin="5dp"
+
             app:layout_constraintHorizontal_weight="1"
-            android:gravity="center"
-
-            android:background="@android:drawable/editbox_dropdown_light_frame"
-
-            android:layout_margin="5dp"
-
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/view_left_spinner_valute"
+            app:layout_constraintStart_toEndOf="@+id/view_left_valute_spinner"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintBottom_toBottomOf="@+id/view_left_spinner_valute"
-            app:layout_constraintTop_toTopOf="@+id/view_left_spinner_valute"/>
+            app:layout_constraintBottom_toBottomOf="@+id/view_left_valute_spinner"
+            app:layout_constraintTop_toTopOf="@+id/view_left_valute_spinner"/>
 
-
-    <TextView
-            android:id="@+id/view_left_value"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/text_left_value"
-            android:textSize="40dp"
-            android:padding="10dp"
-            android:gravity="center"
-
-
-            android:background="@android:drawable/editbox_dropdown_light_frame"
-            android:layout_margin="5dp"
-
-
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/view_button_refresh"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintEnd_toStartOf="@+id/view_right_value"/>
-<!--            android:layout_marginBottom="24dp"/>-->
-    <TextView
-            android:id="@+id/view_right_value"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/text_right_value"
-            android:textSize="40dp"
-            android:padding="10dp"
-            android:gravity="center"
-
-            android:background="@android:drawable/editbox_dropdown_light_frame"
-            android:layout_margin="5dp"
-
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/view_button_refresh"
-            app:layout_constraintStart_toEndOf="@+id/view_left_value"
-            app:layout_constraintHorizontal_bias="0.5"/>
-<!--            android:layout_marginBottom="24dp"/>-->
 
 
     <Button
@@ -106,10 +236,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/text_button_refresh"
+            android:background="@drawable/custom_button"
+
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="96dp"/>
+            android:layout_marginBottom="70dp"/>
+
+
     <ProgressBar
             android:id="@+id/progress_bar"
             android:visibility="invisible"
@@ -123,3 +257,5 @@
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
